// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <div
        class="table h-fit w-fit"
      >
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center bg-white my-1 mx-0 [&:after]:content-[""] [&:after]:w-[9px] [&:after]:h-[9px] [&:after]:bg-gray [&:after]:rounded-[50%] [&:after]:leading-5"
                data-testid="dot"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #1
            </div>
          </div>
        </div>
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center bg-white my-1 mx-0 [&:after]:content-[""] [&:after]:w-[9px] [&:after]:h-[9px] [&:after]:bg-gray [&:after]:rounded-[50%] [&:after]:leading-5"
                data-testid="dot"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #2
            </div>
          </div>
        </div>
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center bg-white my-1 mx-0 [&:after]:content-[""] [&:after]:w-[9px] [&:after]:h-[9px] [&:after]:bg-gray [&:after]:rounded-[50%] [&:after]:leading-5"
                data-testid="dot"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline renders with dates 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <div
        class="table h-fit w-fit"
      >
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center bg-white my-1 mx-0 [&:after]:content-[""] [&:after]:w-[9px] [&:after]:h-[9px] [&:after]:bg-gray [&:after]:rounded-[50%] [&:after]:leading-5"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
            style="white-space: nowrap;"
          >
            <div
              class="mr-8 flex-[0_0_auto]"
            >
              <p
                class="m-0 text-md text-graphite font-semibold leading-6"
              >
                25.06.2021
              </p>
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #1
            </div>
          </div>
        </div>
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center bg-white my-1 mx-0 [&:after]:content-[""] [&:after]:w-[9px] [&:after]:h-[9px] [&:after]:bg-gray [&:after]:rounded-[50%] [&:after]:leading-5"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
            style="white-space: nowrap;"
          >
            <div
              class="mr-8 flex-[0_0_auto]"
            >
              <p
                class="m-0 text-md text-graphite font-semibold leading-6"
              >
                25.06.2022
              </p>
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #2
            </div>
          </div>
        </div>
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center bg-white my-1 mx-0 [&:after]:content-[""] [&:after]:w-[9px] [&:after]:h-[9px] [&:after]:bg-gray [&:after]:rounded-[50%] [&:after]:leading-5"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
            style="white-space: nowrap;"
          >
            <div
              class="mr-8 flex-[0_0_auto]"
            >
              <p
                class="m-0 text-md text-graphite font-semibold leading-6"
              >
                25.06.2023
              </p>
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline renders with icons 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <div
        class="table h-fit w-fit"
      >
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <span
                class="my-1 mx-0 text-gray"
                data-testid="icon-1"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #1
            </div>
          </div>
        </div>
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <span
                class="my-1 mx-0 text-gray"
                data-testid="icon-2"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #2
            </div>
          </div>
        </div>
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <span
                class="my-1 mx-0 text-gray"
                data-testid="icon-3"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline renders without a connector 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <div
        class="table h-fit w-fit"
      >
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center bg-white my-1 mx-0 [&:after]:content-[""] [&:after]:w-[9px] [&:after]:h-[9px] [&:after]:bg-gray [&:after]:rounded-[50%] [&:after]:leading-5"
                data-testid="dot"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
                data-testid="connector"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #1
            </div>
          </div>
        </div>
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center bg-white my-1 mx-0 [&:after]:content-[""] [&:after]:w-[9px] [&:after]:h-[9px] [&:after]:bg-gray [&:after]:rounded-[50%] [&:after]:leading-5"
                data-testid="dot"
              />
              <div
                class="flex-1 w-0 border-dashed border-0 border-l border-gray"
                data-testid="connector"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #2
            </div>
          </div>
        </div>
        <div
          class="table-row group"
        >
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mr-6 items-center flex flex-col h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center bg-white my-1 mx-0 [&:after]:content-[""] [&:after]:w-[9px] [&:after]:h-[9px] [&:after]:bg-gray [&:after]:rounded-[50%] [&:after]:leading-5"
                data-testid="dot"
              />
            </div>
          </div>
          <div
            class="table-cell align-top h-full"
          >
            <div
              class="mb-8 grow group-last:mb-0"
            >
              Row #3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
